--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
             <systemPath>${project.basedir}/lib/pinyin4j-2.5.0.jar
             </systemPath>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
