开启文渊阁4j

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>net.noyark</groupId>
     <artifactId>wenyan_lang</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>Wenyan4jProjectManager</module>
+    </modules>
 
     <dependencies>
         <dependency>
