--- a/wyg4j/pom.xml
+++ b/wyg4j/pom.xml
@@ -9,7 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Wenyan4jProjectManager</artifactId>
+    <artifactId>wyg4j</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>net.noyark</groupId>
+            <artifactId>wenyan_lang</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
